--- a/moons.html
+++ b/moons.html
@@ -23,12 +23,12 @@
             </nav>
     </header>
     
-    <div class="intro island-half push">
+    <div class="intro island-half">
         <h1 class="push-none">Saturn's Moons</h1>
     </div>
 
     <div class="grid">
-        <div class="unit unit-m-1-2 island-half">
+        <div class="unit unit-m-1-2 island">
             <div class="grid">
                  <div class="unit unit-s-1 unit-l-1-2 pad-bottom-half">
                     <img src="images/four-moons.jpg" alt="Four Moons">
@@ -50,7 +50,7 @@
             </dl>
         </div>
 
-        <div class="unit unit-m-1-2 island-half">
+        <div class="unit unit-m-1-2 island">
             <div class="grid">
                  <div class="unit unit-s-1 unit-l-1-2 pad-bottom-half">
                     <img src="images/four-moons.jpg" alt="Five Moons">
