--- a/moons.html
+++ b/moons.html
@@ -30,15 +30,15 @@
     <div class="grid">
         <div class="unit unit-m-1-2 island">
             <div class="grid">
-                 <div class="unit unit-s-1 unit-l-1-2 pad-bottom-half">
+                 <div class="unit unit-s-1 unit-l-1-2 pad-bottom">
                     <img src="images/four-moons.jpg" alt="Four Moons">
                 </div>  
-                <div class="unit unit-l-1-2">
+                <div class="unit unit-l-1-2 info">
                     <h2 class="giga">Huge Titan, Dione, Prometheus, and Telesto</h2>
                     <p>Four moons of Saturn can be seen on this image by the Cassini spacecraft: Huge Titan and Dione at the bottom, small Prometheus (under the rings) and tiny Telesto above center.</p>
                 </div>
             </div>
-            <dl>
+            <dl class="data">
                 <dt class="milli">Huge Titan</dt>
                 <dd class="mega">5 150 km</dd>
                 <dt class="milli">Dione</dt>
@@ -52,15 +52,15 @@
 
         <div class="unit unit-m-1-2 island">
             <div class="grid">
-                 <div class="unit unit-s-1 unit-l-1-2 pad-bottom-half">
+                 <div class="unit unit-s-1 unit-l-1-2 pad-bottom">
                     <img src="images/four-moons.jpg" alt="Five Moons">
                 </div>  
-                <div class="unit unit-l-1-2">
+                <div class="unit unit-l-1-2 info">
                     <h2 class="giga">Rhea, Mimas, Enceladus, Pandora, and Janus</h2>
-                    <p>Five moons in another Cassini image: Rhea bisected in the foreground, Mimas behind it, bright Enceladus above and beyond the rings, Pandora eclipsed by the F Ring, and Janus off to the left.</p>
+                    <p>Five moons in another Cassini image: Rhea bisected in the foreground, Mimas behind it, bright Enceladus above and beyond the rings, Pandora eclipsed by the F Ring.</p>
                 </div>
             </div>
-             <dl>
+             <dl class="data">
                 <dt class="milli">Rhea</dt>
                 <dd class="mega">325 783 km</dd>
                 <dt class="milli">Mimas</dt>
@@ -74,14 +74,29 @@
             </dl>
         </div>
     </div>
+    
+    <div class="discovery island">
+        <h2 class="tera">Discovery of Saturn's Moons</h2>
+        <div class="grid">
+            <div class="unit unit-s-1 unit-m-1 unit-l-1-4 pad-bottom">
+                <img src="images/saturns-moons.jpg">
+            </div>
+            <div class="unit unit-s-1 unit-m-2-3 unit-l-1-2">
+                <p class="discovery-text">Christiaan Huygens discovered the first known moon of Saturn. The year was 1655 and the moon was Titan. Giovanni Domenico Cassini made the next four discoveries: Iapetus (1671), Rhea (1672), Dione (1684), and Tethys (1684). Mimas and Enceladus were both discovered by William Herschel in 1789.</p>
+            </div>
+            <div class="unit unit-s-1 unit-m-1-3 unit-l-1-4">
+                <p class="">As telescopic resolving power increased through the 19th century, Saturn's family of known moons grew.</p>
+            </div>
+        </div>
+    </div>
    
     <div class="grid masthead">
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 island-half">
             <p class="push-none micro">©2014 Saturn Planetary Consortium</p>
         </div>
-        <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 island-half">
+        <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-2-3 island-half">
             <nav>
-                <ul class="nav micro">
+                <ul class="nav footer micro">
                     <li><a href="index.html">Planet</a></li>
                     <li><a href="moons.html">Moons</a></li>    
                     <li><a href="exploration.html">Exploration</a></li>
