--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="grid characteristics">
         <div class="unit unit-s-1 unit-m-1-2 unit-l-1-2 island-half">
             <h2 class="tera">Orbital Characteristics</h2>
-            <dl>
+            <dl class="data">
                 <dt class="milli">Aphelion</dt>
                 <dd class="mega">1 513 325 783 km</dd>
                 <dt class="milli">Perihelion</dt>
@@ -68,7 +68,7 @@
         </div>
         <div class="unit unit-s-1 unit-m-1-2 unit-l-1-2 island-half">
             <h2 class="tera">Physical Characteristics</h2>
-            <dl>
+            <dl class="data">
                 <dt class="milli">Mean Radius</dt>
                 <dd class="mega">158 232 ±6 km</dd>
                 <dt class="milli">Mass</dt>
@@ -85,9 +85,9 @@
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 island-half">
             <p class="push-none micro">©2014 Saturn Planetary Consortium</p>
         </div>
-        <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-1-3 island-half">
+        <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-2-3 island-half">
             <nav>
-                <ul class="nav micro">
+                <ul class="nav footer micro">
                     <li><a href="index.html">Planet</a></li>
                     <li><a href="moons.html">Moons</a></li>    
                     <li><a href="exploration.html">Exploration</a></li>
