--- a/moons.html
+++ b/moons.html
@@ -85,7 +85,7 @@
                 <p class="discovery-text">Christiaan Huygens discovered the first known moon of Saturn. The year was 1655 and the moon was Titan. Giovanni Domenico Cassini made the next four discoveries: Iapetus (1671), Rhea (1672), Dione (1684), and Tethys (1684). Mimas and Enceladus were both discovered by William Herschel in 1789.</p>
             </div>
             <div class="unit unit-s-1 unit-m-1-3 unit-l-1-4">
-                <p class="">As telescopic resolving power increased through the 19th century, Saturn's family of known moons grew.</p>
+                <p>As telescopic resolving power increased through the 19th century, Saturn's family of known moons grew.</p>
             </div>
         </div>
     </div>
