--- a/exploration.html
+++ b/exploration.html
@@ -54,12 +54,18 @@
         
         <div class="push">
             <p class="push-none"><i>Your level of awesomeness:</i></p>
-            <input type="radio" id="meh" name="level-of-awesomeness">
-            <label for="meh">Meh...</label>
-            <input type="radio" id="good" name="level-of-awesomness">
-            <label for="good">Pretty good.</label>
-            <input type="radio" id="super" name="level-of-awesomeness">
-            <label for="super">Super!</label>
+            <span class="radio">
+                <input type="radio" id="meh" name="level-of-awesomeness">
+                <label for="meh">Meh...</label>
+            </span>
+            <span class="radio">
+                <input type="radio" id="good" name="level-of-awesomness">
+                <label for="good">Pretty good.</label>
+            </span>
+            <span class="radio">
+                <input type="radio" id="super" name="level-of-awesomeness">
+                <label for="super">Super!</label>
+            </span>
         </div>
         
         <div>
