Changed aesthetic appearance of website

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Saturn</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link href="http://fonts.googleapis.com/css?family=Merriweather:400,400italic,700|Open+Sans:400,700" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <link href="css/grid.css" rel="stylesheet">
     <link href="css/typography.css" rel="stylesheet">
@@ -18,8 +19,8 @@
    <header role="banner" id="top" class="masthead">
         <h1 class="header exa island">Saturn</h1>
             <nav role="navigation" class="island">
-                <ul class="nav mega">
-                    <li><a class="island-half" href="index.html">Planet</a></li>
+                <ul class="nav brand-family mega">
+                    <li><a class="island-half nav-current" href="index.html">Planet</a></li>
                     <li><a class="island-half" href="moons.html">Moons</a></li>    
                     <li><a class="island-half" href="exploration.html">Exploration</a></li>
                 </ul>
@@ -28,7 +29,7 @@
   
 <main role="main" id="main">
     <div class="intro exa island-half push">
-        <p class="push-none">Saturn, the sixth planet in the Solar System</p>
+        <p class="push-none brand-family ">Saturn, the sixth planet in the Solar System</p>
     </div>
     
     <div class="grid">
@@ -93,10 +94,10 @@
         </div>
         <div class="unit unit-xs-1 unit-s-1 unit-m-1-2 unit-l-2-3 island-half">
             <nav>
-                <ul class="nav footer micro">
-                    <li><a href="index.html">Planet</a></li>
-                    <li><a href="moons.html">Moons</a></li>    
-                    <li><a href="exploration.html">Exploration</a></li>
+                <ul class="nav footer brand-family mega">
+                    <li><a class="island-half" href="index.html">Planet</a></li>
+                    <li><a class="island-half" href="moons.html">Moons</a></li>    
+                    <li><a class="island-half" href="exploration.html">Exploration</a></li>
                 </ul>
             </nav>
          </div>
